Fix vertical alignment of chips

--- a/src/components/_chip.scss
+++ b/src/components/_chip.scss
@@ -9,6 +9,7 @@ $eve-chip-size: 1.75rem;
     height: $eve-chip-size;
     line-height: $eve-chip-size;
     padding: 0 $eve-spacing-tiny;
+    vertical-align: top;
 
     .eve-avatar,
     .eve-chip-icon {
